Issue #44 - When Page description is too long it goes behind other elements on the videoPage

--- a/KhanAcademy/pages/videoPage/videoPage.css
+++ b/KhanAcademy/pages/videoPage/videoPage.css
@@ -32,10 +32,14 @@
 }
 
 #videoPagePanel #pageDesc{
-	font-size:10pt;
-	color:#666;    
-    -ms-grid-row: 3;    
-	-ms-grid-column: 3;
+    font-size:10pt;
+    color:#666;
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right:20px;
 }
 
 #videoPagePanel #videoDownload, #videoPagePanel #videoDelete {
